--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -69,6 +69,8 @@ on_success:
 - ps: Add-Content -Path "$env:USERPROFILE\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
 - git config --global user.email "appveyor@lowlydba.com"
 - git config --global user.name "Appveyor"
+- git checkout %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
 - git add .
 - git commit -a -m "CI produced files"
+- git status
 - git push origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% -f
