--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -73,4 +73,4 @@ on_success:
 - git add .
 - git commit -a -m "CI produced files"
 - git status
-- git push origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% -f
+- git push
