--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -61,7 +61,7 @@ test_script:
 
 on_success:
 - git config --global credential.helper store
-- ps: Add-Content -Path "$env:USERPROFILE\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
+- ps: Add-Content -Path "$env:HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
 - git config --global user.email "appveyor@lowlydba.com"
 - git config --global user.name "Appveyor"
 - git checkout %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
