--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -43,6 +43,12 @@ environment:
       DB_INSTANCE: (local)\SQL2012SP1
       LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_110
 
+clone_script:
+- git config --global credential.helper store
+- ps: Add-Content -Path "$env:HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
+- git clone -q --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/ExpressSQL.git $env:APPVEYOR_BUILD_FOLDER
+- cd $env:APPVEYOR_BUILD_FOLDER
+
 install:
 - ps: Install-Module SqlServer -Force -AllowClobber
 - npm install
@@ -60,12 +66,10 @@ test_script:
 - npx tsqllint -c %LINT_CONFIG% *.sql
 
 on_success:
-- git config --global credential.helper store
-- ps: Add-Content -Path "$env:HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
 - git config --global user.email "appveyor@lowlydba.com"
 - git config --global user.name "Appveyor"
 - git checkout %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
 - git add .
 - git commit -a -m "CI produced files"
 - git status
-- git push
+- git push origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% -f
