--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -46,8 +46,8 @@ environment:
 clone_script:
 - git config --global credential.helper store
 - ps: Add-Content -Path "$env:HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
-- git clone -q --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/ExpressSQL.git $env:APPVEYOR_BUILD_FOLDER
-- cd $env:APPVEYOR_BUILD_FOLDER
+- git clone -q --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/ExpressSQL.git %APPVEYOR_BUILD_FOLDER%
+- cd %APPVEYOR_BUILD_FOLDER%
 
 install:
 - ps: Install-Module SqlServer -Force -AllowClobber
