--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -45,8 +45,7 @@ environment:
 
 clone_script:
 - git config --global credential.helper store
-- ps: Add-Content -Path "$env:HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
-- git clone -q --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/ExpressSQL.git %APPVEYOR_BUILD_FOLDER%
+- git clone -q --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://appveyor:$($env:access_token)@github.com/LowlyDBA/ExpressSQL.git %APPVEYOR_BUILD_FOLDER%
 - cd %APPVEYOR_BUILD_FOLDER%
 
 install:
