--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -67,7 +67,6 @@ test_script:
 on_success:
 - git config --global user.email "john@lowlydba.com"
 - git config --global user.name "LowlyDBA"
-- git checkout %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
 - git add .
 - git commit -a -m "CI produced files"
-- git push
+- git push https://LowlyDBA:$($env:access_token)@github.com/LowlyDBA/ExpressSQL.git %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
