--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -66,7 +66,8 @@ test_script:
 
 on_success:
 - git config --global user.email "john@lowlydba.com"
-- git config --global user.name "LowlyDBA"
+- git config --global user.name "John McCall"
+- git config --global user.username "LowlyDBA"
 - git add .
 - git commit -a -m "CI produced files"
-- git push https://LowlyDBA:$($env:access_token)@github.com/LowlyDBA/ExpressSQL.git %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
+- git push %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
