--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -49,7 +49,7 @@ clone_script:
 
     Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
 
-- git clone -q --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/ExpressSQL.git %APPVEYOR_BUILD_FOLDER%
+- git clone -q --single-branch --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/ExpressSQL.git %APPVEYOR_BUILD_FOLDER%
 - cd %APPVEYOR_BUILD_FOLDER%
 
 install:
@@ -69,6 +69,7 @@ test_script:
 - npx tsqllint -c %LINT_CONFIG% *.sql
 
 on_success:
+- git remote set-url origin git@github.com:LowlyDBA/ExpressSQL.git
 - git config --global user.email "john@lowlydba.com"
 - git config --global user.name "John M"
 - git config --global user.username "LowlyDBA"
