--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -6,7 +6,7 @@ max_jobs: 1
 
 environment:
   access_token:
-    secure: gSUl66cPigbhNCX5U1JSgIOcBmfC22TP8hArcTUgb2CyxRuHydZs3ckI+hU8Le1j
+    secure: E5I+i+CQyj9EHusDrPSQKHRXmzmpTujYAoFxlvJjvSRSEQHHzqTBIFR1VuPbwLMi
 
   MSSQL_LOGIN: sa
   MSSQL_PASS: Password12!
@@ -69,7 +69,7 @@ test_script:
 - npx tsqllint -c %LINT_CONFIG% *.sql
 
 on_success:
-- git remote set-url origin https://LowlyDBA:%ACCESS_TOKEN%@github.com/LowlyDBA/ExpressSQL.git
+- git remote set-url origin https://LowlyDBA:%access_token%@github.com/LowlyDBA/ExpressSQL.git
 - git config --global user.email "john@lowlydba.com"
 - git config --global user.name "John M"
 - git config --global user.username "LowlyDBA"
