--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -54,10 +54,6 @@ clone_script:
 - cd %APPVEYOR_BUILD_FOLDER%
 
 install:
-- ps: Register-PackageSource -Name MyNuget -Location https://www.nuget.org/api/v2 -ProviderName NuGet -Trusted
-- ps: Install-Module SqlServer -Force -AllowClobber
-- ps: Install-Package GOEddie.SQLCover
-- ps: choco install codecov --no-progress
 - npm install
 - ps: .\appveyor\start_sqlserver.ps1
 - ps: .\appveyor\install_tsqlt.ps1
@@ -66,18 +62,30 @@ build_script:
 - ps: .\appveyor\make_combined_script.ps1
 - ps: .\appveyor\install_expsql.ps1
 - ps: .\appveyor\build_tsqlt_tests.ps1
-
-test_script:
-- ps: .\appveyor\sqlcover\Run_SQLCover.ps1
 - echo Running TSQLLint tests
 - npx tsqllint -c %LINT_CONFIG% *.sql
 
+test_script:
+- ps: .\appveyor\run_tsqlt_tests.ps1
+
 for:
 -
-  # Only push for final test environment
+  # Only run code cov & push changes on latest build env
   matrix:
     only:
-      - MSSQL: SQL2012SP1
+      - MSSQL: SQL2019
+
+  # Setup codecov, sqlcover & start running
+  before_test:
+  - ps: Register-PackageSource -Name MyNuget -Location https://www.nuget.org/api/v2 -ProviderName NuGet -Trusted | Out-Null
+  - ps: Install-Module SqlServer -Force -AllowClobber
+  - ps: Install-Package GOEddie.SQLCover -Source MyNuget
+  - ps: choco install codecov --no-progress
+  - ps: .\appveyor\sqlcover\start_sqlcover.ps1
+
+  # Stop sqlcover
+  after_test:
+  - ps: .\appveyor\sqlcover\stop_sqlcover.ps1
 
   on_success:
     - codecov -f %COV_REPORT%
