--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -40,22 +40,22 @@ environment:
     LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_110
 
 clone_script:
-  - ps: .\appveyor\github_clone.ps1
+  - ps: . .\appveyor\github_clone.ps1
 
 install:
-  - ps: .\appveyor\install_dependencies.ps1
-  - ps: .\appveyor\start_sqlserver.ps1
-  - ps: .\appveyor\install_tsqlt.ps1
+  - ps: . .\appveyor\install_dependencies.ps1
+  - ps: . .\appveyor\start_sqlserver.ps1
+  - ps: . .\appveyor\install_tsqlt.ps1
 
 build_script:
-  - ps: .\appveyor\make_combined_script.ps1
-  - ps: .\appveyor\install_expsql.ps1
-  - ps: .\appveyor\build_tsqlt_tests.ps1
+  - ps: . .\appveyor\make_combined_script.ps1
+  - ps: . .\appveyor\install_expsql.ps1
+  - ps: . .\appveyor\build_tsqlt_tests.ps1
 
 # Non-covered test run
 test_script:
-  - ps: .\appveyor\run_tsqllint.ps1
-  - ps: .\appveyor\run_tsqlt_tests.ps1
+  - ps: . .\appveyor\run_tsqllint.ps1
+  - ps: . .\appveyor\run_tsqlt_tests.ps1
 
 # Only run code cov & push changes on latest build env
 for:
@@ -66,13 +66,13 @@ for:
 
   # Setup codecov, SQL Cover
   before_test:
-    - ps: .\appveyor\install_coverage_dependencies.ps1
+    - ps: . .\appveyor\install_coverage_dependencies.ps1
 
   # Run tests with SQL Cover analysis
   test_script:
-    - ps: .\appveyor\sqlcover\Run_SQLCover.ps1
+    - ps: . .\appveyor\sqlcover\Run_SQLCover.ps1
 
   # Upload code coverage report, push generated files
   on_success:
     - codecov -f %COV_REPORT%
-    - ps: .\appveyor\push_git_changes.ps1
+    - ps: . .\appveyor\push_git_changes.ps1
