fix az-sql tests, drop broken az-sql code cov

--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -30,7 +30,7 @@ environment:
     LATEST: False
     COV_REPORT: appveyor\sqlcover\Coverage_azuresql.opencoverxml
     AZURE_SQL_USER: lowlysa
-    AzureSQL: True
+    AzureSQL: $true
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2017
@@ -100,23 +100,24 @@ for:
     - codecov -f %COV_REPORT%
     - ps: .\appveyor\push_git_changes.ps1
 
-# Azure SQL - Code cov & Upload
+# Azure SQL
 -  
   matrix:
     only:
       - AzureSQL: True
 
   install:
-    - ps: .\appveyor\install_azuresql.ps1
+    - ps: .\appveyor\install_dependencies.ps1
+    - ps: .\appveyor\install_tsqlt.ps1
 
   # Setup codecov, SQL Cover
-  before_test:
-    - ps: .\appveyor\install_coverage_dependencies.ps1
+  #before_test:
+  #  - ps: .\appveyor\install_coverage_dependencies.ps1
 
   # Run tests with SQL Cover analysis
-  test_script:
-   - ps: .\appveyor\sqlcover\Run_SQLCover.ps1
+  #test_script:
+  # - ps: .\appveyor\sqlcover\Run_SQLCover.ps1
 
   # Upload code coverage report, push generated files
-  on_success:
-    - codecov -f %COV_REPORT%
+  #on_success:
+  #  - codecov -f %COV_REPORT%
