--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -30,31 +30,35 @@ environment:
     LATEST: False
     COV_REPORT: appveyor\sqlcover\Coverage_azuresql.opencoverxml
     AZURE_SQL_USER: lowlysa
-    AzureSQL: $true
+    AzureSQL: True
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2017
     DB_INSTANCE: (local)\SQL2017
     LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_140
     LATEST: False
+    AzureSQL: False
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2016
     DB_INSTANCE: (local)\SQL2016
     LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_130
     LATEST: False
+    AzureSQL: False
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     MSSQL: SQL2014
     DB_INSTANCE: (local)\SQL2014
     LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_120
     LATEST: False
+    AzureSQL: False
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     MSSQL: SQL2012SP1
     DB_INSTANCE: (local)\SQL2012SP1
     LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_110
     LATEST: False
+    AzureSQL: False
 
 clone_script:
   - git config --global credential.helper store
