--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -24,15 +24,15 @@ environment:
 #    LATEST: True
 
   # Azure SQL Env
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    MSSQL: AZURESQL
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
-    TARGET_DB: expresssql
-    DB_INSTANCE: expresssql.database.windows.net
-    LATEST: False
-    COV_REPORT: appveyor\sqlcover\Coverage_azuresql.opencoverxml
-    AZURE_SQL_USER: lowlysa
-    AzureSQL: True
+  # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+  #   MSSQL: AZURESQL
+  #   LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
+  #   TARGET_DB: expresssql
+  #   DB_INSTANCE: expresssql.database.windows.net
+  #   LATEST: False
+  #   COV_REPORT: appveyor\sqlcover\Coverage_azuresql.opencoverxml
+  #   AZURE_SQL_USER: lowlysa
+  #   AzureSQL: True
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2017
