--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -23,16 +23,16 @@ environment:
 #    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
 #    LATEST: True
 
-  # Azure SQL Env
-  # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-  #   MSSQL: AZURESQL
-  #   LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
-  #   TARGET_DB: expresssql
-  #   DB_INSTANCE: expresssql.database.windows.net
-  #   LATEST: False
-  #   COV_REPORT: appveyor\sqlcover\Coverage_azuresql.opencoverxml
-  #   AZURE_SQL_USER: lowlysa
-  #   AzureSQL: True
+  Azure SQL Env
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    MSSQL: AZURESQL
+    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
+    TARGET_DB: expresssql
+    DB_INSTANCE: expresssql.database.windows.net
+    LATEST: False
+    COV_REPORT: appveyor\sqlcover\Coverage_azuresql.opencoverxml
+    AZURE_SQL_USER: lowlysa
+    AzureSQL: True
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2017
