--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -99,7 +99,7 @@ for:
 
   # Run tests with SQL Cover analysis
   test_script:
-    - ps: .\appveyor\sqlcover\run_pester_tests.ps1 -CodeCoverage
+    - ps: .\appveyor\run_pester_tests.ps1 -CodeCoverage
 
   # Build markdown w/ sp_doc
   after_test:
