--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -3,8 +3,8 @@ version: 1.5.{build}
 pull_requests:
   do_not_increment_build_number: false
 max_jobs: 2
-skip_commits:
-  message: CI produced files
+#skip_commits:
+#  message: CI produced files
 
 environment:
   access_token:
