--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -26,7 +26,7 @@ environment:
   # Azure SQL Env
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     MSSQL: AZURESQL
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
+    LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_150
     TARGET_DB: expresssql
     DB_INSTANCE: expresssql.database.windows.net
     LATEST: False
@@ -37,28 +37,28 @@ environment:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2017
     DB_INSTANCE: localhost\SQL2017
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_140
+    LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_140
     LATEST: False
     AzureSQL: False
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     MSSQL: SQL2016
     DB_INSTANCE: localhost\SQL2016
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_130
+    LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_130
     LATEST: False
     AzureSQL: False
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     MSSQL: SQL2014
     DB_INSTANCE: localhost\SQL2014
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_120
+    LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_120
     LATEST: False
     AzureSQL: False
     
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     MSSQL: SQL2012SP1
     DB_INSTANCE: localhost\SQL2012SP1
-    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_110
+    LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_110
     LATEST: False
     AzureSQL: False
 
