--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -20,7 +20,7 @@ environment:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     MSSQL: SQL2019
     DB_INSTANCE: localhost\SQL2019
-    LINT_CONFIG: .\appveyor\tsqllint\.tsqllintrc_150
+    LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
     LATEST: True
 
   # Azure SQL Env
